# cee520_final_project

./: Documentation for MTO Project Code.md  author_drift_summary.csv  centrality_analysis.py  community_detection.py  community_evolution.py  download_tracker.json  edge_analysis.ipynb  geoclustering.ipynb  geocode_cache.json  geocoding.py  issues.json  keyword_drift_scores.csv  keyword_global_counts.json  label_communities.py  mto.py  mto_article_keyword_links.gexf  mto_author_interactions.gexf  mto_author_interactions_cleaned.gexf  mto_author_interactions_cleaned_collapsed.gexf  mto_author_interactions_collapsed.gexf  mto_author_interactions_collapsed_all_centrality.csv  mto_author_interactions_collapsed_citation_centrality.csv  mto_author_interactions_collapsed_collaboration_centrality.csv  mto_author_interactions_collapsed_geo.gexf  mto_author_relationships.json  mto_citations.gexf  mto_client.py  mto_keywords.json  mto_scraper.py  mto_semantic_reachability.gexf  mto_temporal_keyword_graph.gexf  node2vec_analysis.py  pyproject.toml  readme.org  sankey_plots.py  semantic.py  semantic_drift.py  stats.py  stopwords.txt  top_keywords.txt  (+1 more)
geo_random_walk_plots/: Authors top global bridges.csv
graph_stats/: author_interactions_collapsed_stats.json  author_interactions_stats.json  citations_stats.json  keyword_links_stats.json  semantic_reachability_stats.json  temporal_keyword_stats.json
mto/: mto_library.json  mto_library_with_keywords.json
node2vec_embeddings/: node2vec_1993_1996.csv  node2vec_1996_1999.csv  node2vec_1999_2002.csv  node2vec_2002_2005.csv  (+8 more)
(+2072 files in other folders)
