[tool.poetry]
name = "scinetextractor"
version = "0.1.0"
description = "Extract insights from large volumes of academic literature"
authors = ["Jürgen Hackl <hackl@princeton.edu>"]
license = "MIT"
readme = "readme.org"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
bibtexparser = {version = "^2.0.0b7", allow-prereleases = true}
nltk = "^3.9.1"
spacy = "^3.8.2"
locationtagger = "^0.0.1"
lxml-html-clean = "^0.4.1"
networkx = "^3.4.2"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scipy = "^1.15.1"
wordcloud = "^1.9.4"
markdownify = "^0.14.1"
tensorly = "^0.9.0"
cdlib = "^0.4.0"
python-igraph = "^0.11.8"
leidenalg = "^0.10.2"
dynetx = "^0.3.2"
infomap = "^2.8.0"
nbformat = "^5.10.4"
reverse-geocode = "^1.6.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
deptry = "^0.20.0"
mypy = "^1.13.0"
black = "^24.10.0"
pylsp-mypy = "^0.6.9"
python-lsp-server = {version="^1.12.0", extras=["all"]}
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88